maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:8: error: ')' expected but '}' found.
		} else if (random3() == 1) {
                ^